# bibble

./: .asdf.plugins  .envrc  .gitmodules  .lenvs  .readthedocs.yaml  .related  CHANGELOG.md  README.md  VERSION.toml  architecture.md  checklist.md  doot.toml  pyproject.toml  ruff.toml  towncrier.toml  tox.toml
.github/workflows/: python-publish.yml
.tasks/: bib_middleware_todos.org  docs.toml  release.py
bib_middleware/: __init__.py  author_handler.py  base_writer.py  doi_handler.py  failure_handler.py  file_handler.py  formatter.py  hash_handler.py  isbn_handler.py  key_handler.py  latex_handler.py  library.py  model.py  online_handler.py  path_handler.py  rst_writer.py  selectors.py  sorting_handler.py  stack_builder.py  tags_handler.py  title_handler.py  url_handler.py
bib_middleware/fields/: __init__.py  field_accumulator.py  field_sorter.py  field_substitutor.py  subtitle_reader.py  title_reader.py  url_reader.py
bib_middleware/fields/__tests/: test_field_sorter.py
bib_middleware/files/: online_downloader.py  path_reader.py  path_writer.py
bib_middleware/io/: __init__.py  reader.py  rst_writer.py  writer.py
bib_middleware/latex/: __init__.py  _str_transform.py  latex_reader.py  latex_writer.py
bib_middleware/metadata/: __init__.py  duplicate_handler.py  isbn_validator.py  isbn_writer.py  key_locker.py  metadata_writer.py  tags_reader.py  tags_writer.py
bib_middleware/people/: __init__.py  name_merger.py  name_reader.py  name_sub.py  name_writer.py
bib_middleware/people/__tests/: test_name_sub.py
bib_middleware/util/: error_raiser.py  failure_handler.py  field_matcher.py  formatter.py  selectors.py  str_transform.py
bibble/: __init__.py  _interface.py  index.rst  library.py  middlewares.rst  model.py  model.rst
bibble/__tests/: test_model.py  test_stacks.py
bibble/__tests/_data/: 1320.bib  1320_clean.bib  1320_duplicates.bib  1320_orig.bib  1868.bib  1914.bib  1947.bib
bibble/_docs/: conf.py  faq.rst  glossary.rst
bibble/_docs/_changes/: +c5f21489.misc.md
bibble/bidi/: bidi_isbn.py  bidi_latex.py  bidi_names.py  bidi_paths.py  bidi_tags.py  brace_wrapper.py  index.rst
bibble/error/: __init__.py  _interface.py  duplicate_handler.py  failure_handler.py
bibble/error/__tests/: test_duplicate_handler.py  test_failure_handler.py
bibble/failure/: duplicate_handler.py  failure_handler.py
bibble/failure/__tests/: test_duplicate_handler.py  test_failure_handler.py
bibble/fields/: __init__.py  _interface.py  field_accumulator.py  field_sorter.py  field_substitutor.py  subtitle_reader.py  title_reader.py  url_reader.py
bibble/fields/__tests/: test_field_accumulator.py  test_field_sorter.py  test_field_substitutor.py  test_title_reader.py  test_url_reader.py
bibble/files/: __init__.py  online_downloader.py  path_reader.py  path_writer.py
bibble/files/__tests/: test_online_downloader.py  test_path_reader.py  test_path_writer.py
bibble/io/: __init__.py  _interface.py  _util.py  jinja_writer.py  pair_stack.py  reader.py  rst_writer.py  writer.py
bibble/io/__tests/: test_jinja_writer.py  test_pair_stack.py  test_reader.py  test_rst_writer.py  test_writer.py
bibble/io/__tests/_data/: empty_lib.rst  simple_lib.rst
bibble/io/__tests/_templates/: just_title_entry.jinja  simple_footer.jinja  simple_header.jinja  simple_lib.jinja  title_year_entry.jinja
bibble/latex/: _interface.py  latex_reader.py  latex_writer.py  reader.py  writer.py
bibble/latex/__tests/: test_reader.py  test_writer.py
bibble/metadata/: __init__.py  _interface.py  duplicate_handler.py  entry_sorter.py  isbn_validator.py  isbn_writer.py  key_locker.py  metadata_writer.py  tags_reader.py  tags_writer.py
bibble/metadata/__tests/: test_entry_sorter.py  test_isbn_validator.py  test_isbn_writer.py  test_key_locker.py  test_metadata_writer.py  test_tags_reader.py  test_tags_writer.py
bibble/people/: _interface.py  name_reader.py  name_splitter.py  name_sub.py  name_writer.py
bibble/people/__tests/: test_name_reader.py  test_name_sub.py  test_name_writer.py
bibble/util/: field_matcher.py  field_matcher_m.py  middlecore.py  mixins.py  name_parts.py  pair_stack.py  selectors.py  str_transform_m.py
docs/: conf.py  index.rst
docs/_api/: bib_middleware.__tests.rst  bib_middleware.error.rst  bib_middleware.fields.rst  bib_middleware.files.rst  bib_middleware.latex.rst  bib_middleware.metadata.rst  bib_middleware.people.rst  bib_middleware.rst  bib_middleware.util.rst  modules.rst
