[project]
name            = "bibble"
version         = "0.1.0"
description     = ""
readme          = "README.md"
requires-python = ">=3.12"
license         = {file = "LICENSE"}
keywords        = []
authors         = [
  {name  = "John Grey", email = "jgrey.n.plus.one@gmail.com"},
]
classifiers     = [
  "Programming Language :: Python"
]

dependencies   = [
    "jgdv>=1.0",
    "tqdm",
    "pyisbn",
    "selenium",
    "jsonlines",
    "isbn_hyphenate",
    "waybackpy",
    "bibtexparser>=1.0.0b4",
    "internetarchive",
]

[project.optional-dependencies]
docs = [
    "Sphinx >=7.4.0",
    "sphinx-rtd-theme",
    "myst_parser >= 4.0.0",

]
# dev  = [ "pipreqs"]
test = [ "pytest > 7.0.0" ]

##-- urls
[project.urls]
homepage      = "https://jgrey4296.github.io/bibble"
documentation = "https://bibble.readthedocs.io/en/latest"
repository    = "https://github.com/jgrey4296/bibble"
changelog     = "https://github.com/bibble/blob/master/CHANGELOG.md"

##-- end urls

##-- scripts
[project.scripts]
# bibble = "bibble.__main__:main"

[project.gui-scripts]
# spam-gui      = "spam:main_gui"

[project.entry-points."nothing"]
# tomatoes      = "spam:main_tomatoes"

##-- end scripts

##-- build-system
[build-system]
requires = [
         "setuptools >= 63.1.0",
         "wheel >= 0.37.1"
]

build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = true
where      = ["."]
include    = ["bibble"]

[tool.setuptools.package-data]
"*" = ["*"]
"bibble.__data"    = ["*.so"]

[tool.setuptools.exclude-package-data]

##-- end build-system

# Tools #######################################################################

##-- pyright
[tool.pyright]
# strict = bibble.*
verboseOutput               = true
typeCheckingMode            = "strict"
pythonVersion               = "3.12"

reportUnusedImport          = false
reportAssertAlwaysTrue      = "information"
reportMissingParameterType  = "warning"
reportMissingTypeArgument   = "warning"
reportMissingTypeStubs      = "warning"
reportUnknownMemberType     = "warning"
reportUnknownParameterType  = "information"
reportUnknownVariableType   = "warning"
reportUnnecessaryCast       = "information"
reportUnnecessaryIsInstance = "warning"

##-- end pyright

##-- mypy
# https://mypy.readthedocs.io/en/stable/config_file.html#config-file
[tool.mypy]
python_version         = "3.12"
follow_imports         = "skip"
cache_dir              = ".temp/mypy_cache"
incremental            = true

warn_unused_configs    = true
ignore_missing_imports = true

##-- end mypy

##-- pytest
[tool.pytest.ini_options]
addopts         = ["--ignore-glob=related_/*"]
cache_dir       = ".temp/pytest_cache"
log_file        = ".temp/logs/pytest.log"

log_cli         = false
log_level       = "DEBUG"
log_cli_level   = "DEBUG"
##-- end pytest

##-- bumpver
[tool.bumpver]
current_version    = "0.0.1"
version_pattern    = "MAJOR.MINOR.PATCH"
commit_message     = "[bump]: version {old_version} -> {new_version}"
tag_message        = "{new_version}"
tag_scope          = "default"
# commit             = true
# tag                = true
# pre_commit_hook  = ""
# post_commit_hook = ""
# push             = true

[tool.bumpver.file_patterns]
"pyproject.toml"   = [
                   '^version\s+=\s+"{version}"',
                   '^current_version\s+=\s+"{version}"'
]
"bibble/__init__.py" = ['^__version__\s+=\s+"{version}"']

##-- end bumpver

##-- isort
# https://pycqa.github.io/isort/docs/configuration/options.html
[tool.isort]
color_output           = false
py_version             = 311
# profile                = "hug"
comment_prefix         = "# "
sections               = [
"FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"
]
default_section        = "THIRDPARTY"
lines_after_imports    = -1
lines_between_sections = 1
lines_between_types    = 0

import_heading_future      = "Imports:"
import_heading_stdlib      = "##-- stdlib imports"
import_heading_thirdparty  = "##-- 3rd party imports"
import_heading_firstparty  = "##-- 1st party imports"
import_heading_localfolder = ""

import_footer_future      = ""
import_footer_stdlib      = "##-- end stdlib imports"
import_footer_thirdparty  = "##-- end 3rd party imports"
import_footer_firstparty  = "##-- end 1st party imports"
import_footer_localfolder = ""

add_imports            = []

##-- end isort
